# storage-leak-detector

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: Card.tsx  CopyPathButton.tsx  CorruptionBanner.tsx  DeleteConfirmModal.tsx  DeletePathButton.tsx  DepthFilter.tsx  PathInspectButton.tsx  PathPicker.tsx  ResizableTable.tsx  ScanProgress.tsx  Toast.tsx  WatchPanel.tsx
frontend/src/context/: AddToDeletionContext.tsx  ScanContext.tsx
frontend/src/utils/: formatChartTime.ts
frontend/src/views/: BiggestFiles.tsx  Dashboard.tsx  Deletion.tsx  Duplicates.tsx  Explorer.tsx  Playback.tsx  ProcessIO.tsx  Settings.tsx
scripts/: investigate_timeline.py  prepare_build.py  verify_io_counters.py
src/sldd/: __init__.py  adaptive.py  api.py  cli.py  delete.py  detect.py  diff.py  models.py  platform_utils.py  playback.py  process_io.py  report.py  scheduler.py  server.py  snapshot.py  storage.py
src/sldd/web/: index.html
src/sldd/web/assets/: index-AMvNMnJO.css  index-Cys4a6nx.js  index-awr1w-cj.js
tests/: PROCESS_IO_E2E.md  conftest.py  io_writer.py  test_api.py  test_cli.py  test_delete.py  test_detect.py  test_diff.py  test_models.py  test_platform_utils.py  test_playback.py  test_process_io_e2e.py  test_report.py  test_server.py  test_snapshot.py  test_storage.py
